Need naive-bayes

--- a/Assignment_3/Assignment_3.html
+++ b/Assignment_3/Assignment_3.html
@@ -391,6 +391,9 @@ verbose = getOption(&quot;datatable.verbose&quot;))</code></pre>
 </div>
 </div>
 </div>
+<div id="i-need-to-create-objects-x-which-holds-the-predictor-variables-and-y-which-holds-the-response-variables-and-use-them-to-build-a-model-but-im-stuck" class="section level1">
+<h1>I need to create objects x which holds the predictor variables and y which holds the response variables and use them to build a model but I’m stuck</h1>
+</div>
 
 
 
