ready to submit

--- a/XL_Final/XL_Final.html
+++ b/XL_Final/XL_Final.html
@@ -195,7 +195,7 @@ pre code {
 <p>head(test) head(train)</p>
 <p>glimpse(test) glimpse(train)</p>
 <p>diamond_test &lt;- read_csv(“XL_Final/test.csv”) diamond_train &lt;- read_csv(“XL_Final/train.csv”)</p>
-<p>head(diamond_test) head(diamond_train)</p>
+<p>head(diamond_test) summary(diamond_train)</p>
 <p>sum(is.na(diamond_test)) sum(is.na(diamond_train))</p>
 <div id="converting-character-variables-to-factors" class="section level3">
 <h3>converting character variables to factors</h3>
